fixing alignment issue

--- a/output.css
+++ b/output.css
@@ -688,6 +688,10 @@ video {
   bottom: 0.5rem;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -824,10 +828,6 @@ video {
   top: 33.333333%;
 }
 
-.top-1\/4 {
-  top: 25%;
-}
-
 .top-10 {
   top: 2.5rem;
 }
@@ -848,8 +848,28 @@ video {
   top: 2rem;
 }
 
-.bottom-4 {
-  bottom: 1rem;
+.-top-8 {
+  top: -2rem;
+}
+
+.-top-4 {
+  top: -1rem;
+}
+
+.-top-5 {
+  top: -1.25rem;
+}
+
+.-top-3 {
+  top: -0.75rem;
+}
+
+.-top-3\.5 {
+  top: -0.875rem;
+}
+
+.-top-2 {
+  top: -0.5rem;
 }
 
 .isolate {
@@ -1338,6 +1358,14 @@ video {
   height: min-content;
 }
 
+.h-\[420px\] {
+  height: 420px;
+}
+
+.h-\[430px\] {
+  height: 430px;
+}
+
 .max-h-32 {
   max-height: 8rem;
 }
@@ -1537,11 +1565,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-x-16 {
   --tw-translate-x: -4rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1554,11 +1577,6 @@ video {
 
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/4 {
-  --tw-translate-y: -25%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1819,6 +1837,12 @@ video {
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
@@ -1853,12 +1877,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-x-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .self-auto {
@@ -2512,6 +2530,10 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -2536,8 +2558,8 @@ video {
   padding-top: 0.5rem;
 }
 
-.pb-6 {
-  padding-bottom: 1.5rem;
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -3177,11 +3199,6 @@ video {
   position: absolute;
 }
 
-.before\:inset-0::before {
-  content: var(--tw-content);
-  inset: 0px;
-}
-
 .before\:left-0::before {
   content: var(--tw-content);
   left: 0px;
@@ -3226,11 +3243,6 @@ video {
   content: var(--tw-content);
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.before\:content-\[\'\'\]::before {
-  --tw-content: '';
-  content: var(--tw-content);
 }
 
 .after\:absolute::after {
@@ -3346,11 +3358,6 @@ video {
 .hover\:text-darkGreen:hover {
   --tw-text-opacity: 1;
   color: rgb(30 98 77 / var(--tw-text-opacity));
-}
-
-.hover\:text-gray-800:hover {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .hover\:text-primary:hover {
@@ -3522,12 +3529,20 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:absolute {
+    position: absolute;
+  }
+
   .md\:-bottom-14 {
     bottom: -3.5rem;
   }
 
   .md\:-left-20 {
     left: -5rem;
+  }
+
+  .md\:-top-12 {
+    top: -3rem;
   }
 
   .md\:bottom-0 {
@@ -3538,22 +3553,6 @@ video {
     bottom: 0.125rem;
   }
 
-  .md\:bottom-4 {
-    bottom: 1rem;
-  }
-
-  .md\:right-20 {
-    right: 5rem;
-  }
-
-  .md\:top-28 {
-    top: 7rem;
-  }
-
-  .md\:-top-12 {
-    top: -3rem;
-  }
-
   .md\:left-1\/3 {
     left: 33.333333%;
   }
@@ -3562,8 +3561,16 @@ video {
     left: 2rem;
   }
 
+  .md\:right-20 {
+    right: 5rem;
+  }
+
   .md\:right-8 {
     right: 2rem;
+  }
+
+  .md\:top-28 {
+    top: 7rem;
   }
 
   .md\:my-32 {
@@ -3573,6 +3580,10 @@ video {
 
   .md\:-mr-20 {
     margin-right: -5rem;
+  }
+
+  .md\:mb-4 {
+    margin-bottom: 1rem;
   }
 
   .md\:me-6 {
@@ -3605,10 +3616,6 @@ video {
 
   .md\:mt-64 {
     margin-top: 16rem;
-  }
-
-  .md\:mb-4 {
-    margin-bottom: 1rem;
   }
 
   .md\:block {
@@ -3663,16 +3670,16 @@ video {
     height: 300px;
   }
 
-  .md\:h-\[550px\] {
-    height: 550px;
-  }
-
   .md\:h-\[600px\] {
     height: 600px;
   }
 
   .md\:h-full {
     height: 100%;
+  }
+
+  .md\:h-1\/3 {
+    height: 33.333333%;
   }
 
   .md\:min-h-\[550px\] {
@@ -3709,10 +3716,6 @@ video {
 
   .md\:w-44 {
     width: 11rem;
-  }
-
-  .md\:w-6 {
-    width: 1.5rem;
   }
 
   .md\:w-96 {
@@ -3781,12 +3784,6 @@ video {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2rem * var(--tw-space-x-reverse));
-    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .md\:self-auto {
     align-self: auto;
   }
@@ -3817,6 +3814,11 @@ video {
     padding-right: 0px;
   }
 
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -3832,16 +3834,6 @@ video {
     padding-right: 8rem;
   }
 
-  .md\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .md\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -3854,10 +3846,6 @@ video {
 
   .md\:pb-16 {
     padding-bottom: 4rem;
-  }
-
-  .md\:pb-6 {
-    padding-bottom: 1.5rem;
   }
 
   .md\:pr-16 {
@@ -3910,12 +3898,12 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:right-40 {
-    right: 10rem;
-  }
-
   .lg\:right-20 {
     right: 5rem;
+  }
+
+  .lg\:right-40 {
+    right: 10rem;
   }
 
   .lg\:ml-10 {
@@ -3948,6 +3936,10 @@ video {
 
   .lg\:h-auto {
     height: auto;
+  }
+
+  .lg\:h-\[430px\] {
+    height: 430px;
   }
 
   .lg\:w-1\/3 {
@@ -4006,11 +3998,6 @@ video {
     padding-right: 2.5rem;
   }
 
-  .lg\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
   .lg\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -4024,10 +4011,6 @@ video {
   .lg\:py-14 {
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
-  }
-
-  .lg\:pb-8 {
-    padding-bottom: 2rem;
   }
 
   .lg\:text-2xl {
@@ -4072,16 +4055,16 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:right-52 {
-    right: 13rem;
-  }
-
   .xl\:left-20 {
     left: 5rem;
   }
 
   .xl\:right-2 {
     right: 0.5rem;
+  }
+
+  .xl\:right-52 {
+    right: 13rem;
   }
 
   .xl\:mr-52 {
@@ -4158,10 +4141,6 @@ video {
 
   .\32xl\:mr-44 {
     margin-right: 11rem;
-  }
-
-  .\32xl\:h-\[600px\] {
-    height: 600px;
   }
 
   .\32xl\:min-h-\[600px\] {
